fixing overflow

--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,3 +1,8 @@
+body,
+html {
+    overflow-x: hidden;
+}
+
 .scroll-link {
     text-decoration: none;
 }
